# ros2_ws

./: robot.urdf
arduino_codes/: Motor.ino
arduino_codes/akarsh_code/ROSArduinoBridge/: ROSArduinoBridge.ino  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
arduino_codes/akarsh_code/dual_encoder_test/: dual_encoder_test.ino
arduino_codes/akarsh_code/imu_relative/: imu_relative.ino
arduino_codes/bldc_corrected/: bldc_corrected.ino
arduino_codes/bldc_rpm_test/: bldc_rpm_test.ino
arduino_codes/bno055/: bno055.ino
arduino_codes/hall_sensor/: hall_sensor.ino
arduino_codes/imu_mag_acc/: imu_mag_acc.ino
arduino_codes/imu_ros/: imu_ros.ino
arduino_codes/l298n_ros/: l298n_ros.ino
arduino_codes/ros_motor_control/: ros_motor_control.ino
install/: local_setup.sh  setup.sh
install/articubot_one/share/articubot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_motor_hw/share/custom_motor_hw/: custom_motor_hw.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor_serial_bridge/lib/motor_serial_bridge/: all_direction  cmd_to_serial  cmd_to_serial_and_odom  cmd_to_serial_and_odom.py  encoder_odom  encoder_to_odom  motor_bridge_node
install/motor_serial_bridge/share/motor_serial_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pc_serial_communication/lib/pc_serial_communication/: arduino_to_ros  bno055_reader  cmd_vel_value  imu_data  imu_publisher  serial_node
install/pc_serial_communication/share/pc_serial_communication/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_hw/lib/robot_hw/: encoder_publisher  imu_publisher  motor_controller_openloop  motor_controller_pid  odom_publisher_node  rpm_test
install/robot_hw/share/robot_hw/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: maps.pgm  maps.yaml
src/custom_motor_hw/: CMakeLists.txt  custom_motor_hw.xml
src/custom_motor_hw/src/: motor_hardware_interface.cpp
src/maps/: a_map.pgm  a_map.yaml  fahad_house.pgm  fahad_house.yaml  fahad_house.yaml.pgm  fahad_house.yaml.yaml  house_map.pgm  house_map.yaml  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  r_map.pgm  r_map.yaml  room_map.pgm  room_map.yaml  slam_w_map.pgm  slam_w_map.yaml  w_map.pgm  w_map.yaml
src/motor_serial_bridge/: package.xml  setup.cfg  setup.py
src/motor_serial_bridge/motor_serial_bridge/: all_direction.py  cmd_to_serial.py  motor_bridge_node.py
src/pc_serial_communication/: setup.cfg  setup.py
src/pc_serial_communication/pc_serial_communication/: arduino_to_ros.py  imu_data.py
src/robot_hw/: CMakeLists.txt
src/robot_hw/config/: hw_config.yaml
src/robot_hw/include/robot_hw/: arduino_comms.hpp
src/robot_hw/launch/: imu.launch.py  motors.launch.py  robot_sensors.launch.py
src/robot_hw/src/: encoder_publisher.cpp  imu_publisher.cpp  motor_controller_openloop.cpp  motor_controller_pid.cpp  odom_publisher_node.cpp  rpm_test.cpp
(+612 files in other folders)
